# faster-qwen3-tts

./: BLOG.md  INTEGRATION_SUMMARY.md  JETSON_SETUP.md  README.md  bench_ttft.py  bench_v5.py  generate_xvec.py  pyproject.toml
benchmarks/: streaming_clicks_test.py
demo/: index.html  requirements.txt
examples/: audio.py  openai_server.py  streaming_playback.py
faster_qwen3_tts/: cli.py  model.py  predictor_graph.py  talker_graph.py
qwen3_tts_cuda_graphs/: __init__.py  fast_generate_v5.py  manual_cudagraph_predictor.py  manual_cudagraph_talker.py  model.py
tests/: test_e2e_parity.py
