[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["qwen3_tts_cuda_graphs*"]

[project]
name = "qwen3-tts-cuda-graphs"
version = "0.1.0"
description = "Real-time Qwen3-TTS inference using manual CUDA graph capture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "qwen-tts @ git+https://github.com/dffdeeq/Qwen3-TTS-streaming.git",
    "transformers>=4.57",
    "torch>=2.1",
    "numpy",
    "soundfile",
    "huggingface-hub",
]
